@@ -18,12 +18,9 @@ import com.gongjakso.server.domain.post.repository.PostRepository;
 import com.gongjakso.server.domain.post.repository.StackNameRepository;
 import com.gongjakso.server.global.exception.ApplicationException;
 import com.gongjakso.server.global.exception.ErrorCode;
-import com.gongjakso.server.global.util.email.EmailClient;
+// import com.gongjakso.server.global.util.email.EmailClient;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -48,14 +45,14 @@ public class ApplyService {
     private final CategoryRepository categoryRepository;
     private final StackNameRepository stackNameRepository;
     private final ApplyStackRepository applyStackRepository;
-    private final EmailClient emailClient;
+//    private final EmailClient emailClient;
 
     @Transactional
     public void save(Member member, Long postId, ApplyReq req) {
         // Validation
         Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(postId).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
         //Check reapply
-        if (applyRepository.existsApplyByMemberAndPost(member, post)) {
+        if (applyRepository.existsApplyByMemberAndPostAndIsCanceledIsFalse(member, post)) {
             throw new ApplicationException(ErrorCode.ALREADY_APPLY_EXCEPTION);
         }
         //Check Post Date
@@ -168,7 +165,7 @@ public class ApplyService {
             throw new ApplicationException(ErrorCode.UNAUTHORIZED_EXCEPTION);
         }
 
-        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
         Page<Apply> applyPage = applyRepository.findAllByPost(post, pageable);
         List<ApplyList> applyLists = applyPage.getContent().stream()
                 .map(apply -> ApplyList.of(apply, decisionState(apply)))
@@ -180,16 +177,21 @@ public class ApplyService {
         return ApplyPageRes.of(applyLists, pageNo, size, totalPages, last);
     }
 
-    public ParticipationPageRes myParticipationPostListPage(Member member,int page, int size) {
-        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.ASC, "post.endDate"));
-        Page<Apply> participationPage = applyRepository.findApplyByApplyTypeAndMember(ApplyType.PASS,member,pageable);
-        List<ParticipationList> participationLists = participationPage.getContent().stream()
-                .filter(apply -> apply.getPost().getStatus().equals(PostStatus.ACTIVE))
-                .map(apply -> ParticipationList.of(apply.getPost(), CategoryType.valueOf(apply.getRecruit_part())))
+    public ParticipationPageRes myParticipationPostListPage(Member member, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+        List<Apply> applyList = applyRepository.findApplyByApplyTypeAndMemberAndIsCanceledFalse(ApplyType.PASS,member);
+        List<Long> postIdList = applyList.stream()
+                .filter(apply -> apply.getPost().getStatus().equals(PostStatus.ACTIVE) || apply.getPost().getStatus().equals(PostStatus.COMPLETE))
+                .map(Apply::getApplyId)
+                .toList();
+        Page<Post> postPage = postRepository.findAllByPostIdInOrMember(postIdList, member, pageable);
+        List<ParticipationList> participationLists = postPage.getContent().stream()
+                .filter(post -> post.getDeletedAt() == null)
+                .map(ParticipationList::of)
                 .collect(Collectors.toList());
-        int pageNo = participationPage.getNumber();
-        int totalPages = participationPage.getTotalPages();
-        boolean last = participationPage.isLast();
+        int pageNo = postPage.getNumber();
+        int totalPages = postPage.getTotalPages();
+        boolean last = postPage.isLast();
         return ParticipationPageRes.of(participationLists, pageNo, size, totalPages, last);
     }
 
@@ -220,7 +222,7 @@ public class ApplyService {
                 throw new ApplicationException(ErrorCode.UNAUTHORIZED_EXCEPTION);
             }
             Category category = categoryRepository.findCategoryByPostAndCategoryType(post, CategoryType.valueOf(apply.getRecruit_part()));
-            if (category.getSize() - 1 <= 0) {
+            if (category.getSize() <= 0) {
                 throw new ApplicationException(ErrorCode.OVER_APPLY_EXCEPTION);
             } else {
                 category.setSize(category.getSize() - 1);
@@ -258,17 +260,16 @@ public class ApplyService {
     }
 
 
-    public List<MyPageRes> getMyApplyList(Member member) {
+    public Page<MyPageRes> getMyApplyList(Member member, Pageable pageable) {
         // Validation
 
         // Business Logic
-        List<Apply> applyList = applyRepository.findAllByMemberAndDeletedAtIsNull(member);
-
-
-        // Response
-        return applyList.stream()
+        Page<Apply> applyPage = applyRepository.findAllByMemberAndDeletedAtIsNullOrderByCreatedAtDesc(member, pageable);
+        List<MyPageRes> applyList = applyPage.stream()
                 .filter(apply -> apply.getPost().getStatus() == PostStatus.RECRUITING ||
-                        apply.getPost().getStatus() == PostStatus.EXTENSION)
+                        apply.getPost().getStatus() == PostStatus.EXTENSION ||
+                        apply.getPost().getStatus() == PostStatus.CANCEL ||
+                        apply.getPost().getStatus() == PostStatus.CLOSE)
                 .map(apply -> {
                     Post post = apply.getPost();
                     List<String> categoryList = post.getCategories().stream()
@@ -277,7 +278,10 @@ public class ApplyService {
 
                     return MyPageRes.of(post, apply, categoryList);
                 })
-                .collect(Collectors.toList());
+                .toList();
+
+        // Response
+        return new PageImpl<>(applyList, pageable, applyPage.getTotalElements());
     }
 
     public ApplicationRes getMyApplication(Member member, Long postId){
@@ -325,7 +329,7 @@ public class ApplyService {
         apply.updateIsCanceled(Boolean.TRUE);
         Apply saveApply = applyRepository.save(apply);
         // TODO: 이메일 발송 로직을 실시간성이 아닌 일괄배치 또는 비동기로 변환 필요 (성능 문제)
-        emailClient.sendOneEmail(post.getMember().getEmail());
+        // emailClient.sendOneEmail(post.getMember().getEmail());
 
         // Response
         return PatchApplyRes.of(saveApply, member);
